More code cleanup
Added functionality to return cleanings from
GET /properties/{id} for future use if needed.
It is better to use the /properties/{id}/cleanings endpoint

fixes #10
